Projet_Fevrier_Utilisation_OutilMVap_CalculetteLogique/benchmark/Compil-03-22-16:38/CalculetteParser.java
// Generated from Calculette.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CalculetteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, NEWLINE=31, 
		WS=32, FLOAT=33, ENTIER=34, TYPE=35, RETURN=36, IDENTIFIANT=37, LONG_COMMENT=38, 
		SHORT_COMMENT=39;
	public static final int
		RULE_start = 0, RULE_calcul = 1, RULE_instruction = 2, RULE_expression = 3, 
		RULE_finInstruction = 4, RULE_decl = 5, RULE_assignation = 6, RULE_input = 7, 
		RULE_boucle = 8, RULE_condition = 9, RULE_bloc = 10, RULE_codeif = 11, 
		RULE_codefor = 12, RULE_coderepeat = 13, RULE_fonction = 14, RULE_params = 15, 
		RULE_args = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "calcul", "instruction", "expression", "finInstruction", "decl", 
			"assignation", "input", "boucle", "condition", "bloc", "codeif", "codefor", 
			"coderepeat", "fonction", "params", "args"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'*'", "'/'", "'+'", "'-'", "';'", "'='", "'read('", 
			"'write('", "'while'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'>'", 
			"'>='", "'<'", "'<='", "'true'", "'false'", "'{'", "'}'", "'if'", "'else'", 
			"'for'", "'repeat'", "'until'", "','", null, null, null, null, null, 
			"'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "NEWLINE", "WS", "FLOAT", "ENTIER", 
			"TYPE", "RETURN", "IDENTIFIANT", "LONG_COMMENT", "SHORT_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Calculette.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	    private TablesSymboles tablesSymboles = new TablesSymboles();

	    private String mvapEval(String op) {
	        if ( op.equals("*") ){
	            return "MUL";
	        } else if ( op.equals("+") ){
	            return "ADD";
	        } else if (op.equals("-")) {
	            return "SUB";
	        } else if (op.equals("/")) {
	            return "DIV";
	        } else {
	           System.err.println("Opérateur arithmétique incorrect : '"+op+"'");
	           throw new IllegalArgumentException("Opérateur arithmétique incorrect : '"+op+"'");
	        }
	    }

	    private int _cur_label = 1;
	    /** générateur de nom d'étiquettes pour les boucles */
	    private String getNewLabel() { return "B" +(_cur_label++); }

	    private String evalboucle(String cond, String inst) {
	        String labelFin = getNewLabel();
	        String labelDebut = getNewLabel();
	        String sret = "";
	        sret += "LABEL " + labelDebut + "\n";
	        sret += cond;
	        sret += "JUMPF " + labelFin + "\n";
	        sret += inst;
	        sret += "JUMP " + labelDebut + "\n";
	        sret += "LABEL " + labelFin + "\n";
	        return sret;
	    }

	    private String evalCond(String x, String op, String y) {
	        if (op.equals("==")) {
	            return x + y + "EQUAL\n";
	        } else if (op.equals("<")) {
	            return x + y + "INF\n";
	        } else if (op.equals(">")) {
	            return x + y + "SUP\n";
	        } else if (op.equals("!=")) {
	            return x + y + "NEQ\n";
	        } else if (op.equals("<=")) {
	            return x + y + "INFEQ\n";
	        } else if (op.equals(">=")) {
	            return x + y + "SUPEQ\n";
	        } else {
	            System.err.println("Opérateur de comparaison incorrect : '" + op + "'");
	            throw new IllegalArgumentException("Opérateur de comparaison incorrect : '" + op + "'");
	        }
	    }

	    private String evallog(String op) {
	        if (op.equals("&&")) {
	            return "MUL\n";
	        } else if (op.equals("||")) {
	            return "ADD\n";
	        } else if (op.equals("!")) {
	            return "PUSHI 0\nEQUAL\n";
	        } else {
	            System.err.println("Opérateur logique incorrect : '" + op + "'");
	            throw new IllegalArgumentException("Opérateur logique incorrect : '" + op + "'");
	        }
	    }

	    private String evalif(String cond, String instr) {
	        String labelDebut = getNewLabel();
	        String sret = "";
	        sret += cond;
	        sret += "JUMPF " + labelDebut + "\n";
	        sret += instr;
	        sret += "LABEL " + labelDebut + "\n";
	        return sret;
	    }

	    private String evalifelse(String cond, String instr, String instrelse) {
	        String labelFin = getNewLabel();
	        String labelDebutElse = getNewLabel();
	        String sret = "";
	        sret += cond;
	        sret += "JUMPF " + labelDebutElse + "\n";
	        sret += instr;
	        sret += "JUMP " + labelFin + "\n";
	        sret += "LABEL " + labelDebutElse + "\n";
	        sret += instrelse;
	        sret += "JUMP " + labelFin + "\n";
	        sret += "LABEL " + labelFin + "\n";
	        return sret;
	    }

	    private String evalfor(String assignation, String cond, String increment, String instr) {
	        String labelDebutFor = getNewLabel();
	        String labelFinFor = getNewLabel();
	        String sret = "";
	        sret += assignation;
	        sret += "LABEL " + labelDebutFor + "\n";
	        sret += cond;
	        sret += "JUMPF " + labelFinFor + "\n";
	        sret += instr;
	        sret += increment;
	        sret += "JUMP " + labelDebutFor + "\n";
	        sret += "LABEL " + labelFinFor + "\n";
	        return sret;
	    }

	    private String evalRepeat(String instruction, String condition) {
	        String labelDebut = getNewLabel();
	        String sret = "";
	        sret += "LABEL " + labelDebut + "\n";
	        sret += instruction;
	        sret += condition;
	        sret += "JUMPF " + labelDebut + "\n";
	        return sret;
	    }

	public CalculetteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public CalculContext calcul() {
			return getRuleContext(CalculContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CalculetteParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			calcul();
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CalculContext extends ParserRuleContext {
		public String code;
		public DeclContext decl;
		public FonctionContext fonction;
		public InstructionContext instruction;
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CalculetteParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CalculetteParser.NEWLINE, i);
		}
		public List<FonctionContext> fonction() {
			return getRuleContexts(FonctionContext.class);
		}
		public FonctionContext fonction(int i) {
			return getRuleContext(FonctionContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public CalculContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calcul; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterCalcul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitCalcul(this);
		}
	}

	public final CalculContext calcul() throws RecognitionException {
		CalculContext _localctx = new CalculContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_calcul);
		 ((CalculContext)_localctx).code =  new String(); 
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(37);
					((CalculContext)_localctx).decl = decl();
					 _localctx.code += ((CalculContext)_localctx).decl.code; 
					}
					} 
				}
				setState(44);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			 _localctx.code += "JUMP Main\n"; 
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(46);
					match(NEWLINE);
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(52);
				((CalculContext)_localctx).fonction = fonction();
				 _localctx.code += ((CalculContext)_localctx).fonction.code; 
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(60);
					match(NEWLINE);
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			 _localctx.code += "LABEL Main\n"; 
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__5) | (1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__22) | (1L << T__24) | (1L << T__26) | (1L << T__27) | (1L << NEWLINE) | (1L << FLOAT) | (1L << ENTIER) | (1L << RETURN) | (1L << IDENTIFIANT))) != 0)) {
				{
				{
				setState(67);
				((CalculContext)_localctx).instruction = instruction();
				 _localctx.code += ((CalculContext)_localctx).instruction.code; 
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 _localctx.code += "  HALT\n"; 
			}
			_ctx.stop = _input.LT(-1);
			 System.out.println(_localctx.code); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public String code;
		public BlocContext bloc;
		public ExpressionContext expression;
		public AssignationContext assignation;
		public InputContext input;
		public BoucleContext boucle;
		public CodeifContext codeif;
		public CodeforContext codefor;
		public CoderepeatContext coderepeat;
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FinInstructionContext finInstruction() {
			return getRuleContext(FinInstructionContext.class,0);
		}
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public BoucleContext boucle() {
			return getRuleContext(BoucleContext.class,0);
		}
		public CodeifContext codeif() {
			return getRuleContext(CodeifContext.class,0);
		}
		public CodeforContext codefor() {
			return getRuleContext(CodeforContext.class,0);
		}
		public CoderepeatContext coderepeat() {
			return getRuleContext(CoderepeatContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(CalculetteParser.RETURN, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				((InstructionContext)_localctx).bloc = bloc();

				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).bloc.code;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				((InstructionContext)_localctx).expression = expression(0);
				setState(81);
				finInstruction();
				 
				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).expression.code;
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				((InstructionContext)_localctx).assignation = assignation();
				setState(85);
				finInstruction();

				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).assignation.code;
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				((InstructionContext)_localctx).input = input();
				setState(89);
				finInstruction();

				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).input.code;
				    
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(92);
				((InstructionContext)_localctx).boucle = boucle();

				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).boucle.code;
				    
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(95);
				((InstructionContext)_localctx).codeif = codeif();

				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).codeif.code;
				    
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(98);
				((InstructionContext)_localctx).codefor = codefor();

				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).codefor.code;
				    
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(101);
				((InstructionContext)_localctx).coderepeat = coderepeat();

				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).coderepeat.code;
				    
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(104);
				match(RETURN);
				setState(105);
				((InstructionContext)_localctx).expression = expression(0);
				setState(106);
				finInstruction();

				        AdresseType at = tablesSymboles.getAdresseType("return");
				        ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).expression.code;
				        

				        // Tester si entier ou float, si float : STOREL de deux valeurs (décimal et entière) et donc deux return
				        if(at.type.equals("float")){
				           _localctx.code += "STOREL " + at.adresse + "\n";
				           _localctx.code += "STOREL " + ( at.adresse + 1 ) + "\nRETURN\nRETURN\n" ;
				        }
				        else{
				            _localctx.code += "STOREL " + at.adresse + "\nRETURN\n";
				        }
				    
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(109);
				finInstruction();

				        ((InstructionContext)_localctx).code = "";
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
